--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
         <script type="text/javascript" src="http://code.jquery.com/color/jquery.color-2.1.2.min.js"></script>
         
+        <script type="text/javascript" src='https://code.responsivevoice.org/responsivevoice.js'></script>
+
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
     </head>
