--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,14 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Ng2Countries</title>
+        <title>Ng2Countries By dormd</title>
         <base href="/">
 
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
         <script type="text/javascript" src="http://code.jquery.com/color/jquery.color-2.1.2.min.js"></script>
         
         <script type="text/javascript" src='https://code.responsivevoice.org/responsivevoice.js'></script>
+        <link rel='stylesheet' href='assets/styles/font-awesome.css'>
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
