Country details - Refactoring - add country details component. move logic & view to the component

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,9 @@
     </head>
 
     <body>
-        <app-root>Loading...</app-root>
+        <app-root>
+            <div class='angular-app-loading'>Loading...</div>
+        </app-root>
 
         <!-- BAD PRACTICE: NEED TO BE REMOVED -->
         <script>
