Github Hosting - script support hosting with angular-cli and github (for SPA)

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,17 @@
 <!doctype html>
 <html>
     <head>
+        <script>
+            // See http://www.backalleycoder.com/2016/05/13/sghpa-the-single-page-app-hack-for-github-pages/
+            (function(){
+                var redirect = sessionStorage.redirect;
+                delete sessionStorage.redirect;
+                if (redirect && redirect != location.href) {
+                history.replaceState(null, null, redirect);
+                }
+            })();
+        </script>
+
         <meta charset="utf-8">
         <title>Ng2Countries By dormd</title>
         <base href="/">
