new gh-pages version

--- a/404.html
+++ b/404.html
@@ -17,10 +17,10 @@
         <title>Ng2Countries By dormd</title>
         <base href="/ng2-countries/">
 
-        <script type="text/javascript" src="assets/jquery-1.7.1.min.js"></script>
-        <script type="text/javascript" src="assets/jquery.color-2.1.2.min.js"></script>
+        <script type="text/javascript" src="assets/scripts/jquery-1.7.1.min.js"></script>
+        <script type="text/javascript" src="assets/scripts/jquery.color-2.1.2.min.js"></script>
         
-        <script type="text/javascript" src='assets/responsivevoice.js'></script>
+        <script type="text/javascript" src='assets/scripts/responsivevoice.js'></script>
         <link rel='stylesheet' href='assets/styles/font-awesome.css'>
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
