--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 
         <meta charset="utf-8">
         <title>Ng2Countries By dormd</title>
-        <base href="/">
+        <base href="">
 
         <script type="text/javascript" src="assets/scripts/jquery-1.7.1.min.js"></script>
         <script type="text/javascript" src="assets/scripts/jquery.color-2.1.2.min.js"></script>
