--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <meta charset="utf-8">
         <title>Ng2Countries By dormd</title>
-        <base href="">
+        <base href="/ng2-countries/">
 
         <script type="text/javascript" src="assets/scripts/jquery-1.7.1.min.js"></script>
         <script type="text/javascript" src="assets/scripts/jquery.color-2.1.2.min.js"></script>
@@ -55,5 +55,5 @@
             })(jQuery); 
         </script>
 
-    <script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.26dddcf4c210a3cf2c21.bundle.js"></script><script type="text/javascript" src="main.00ad3f1fe4eef53d0cbd.bundle.js"></script></body>
+    <script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.26dddcf4c210a3cf2c21.bundle.js"></script><script type="text/javascript" src="main.f1efc2dc2ffc3ed330c4.bundle.js"></script></body>
 </html>
