new gh-pages version

--- a/404.html
+++ b/404.html
@@ -40,7 +40,7 @@
                     var currentCardColor = card.css('background-color');                  
                     
                     $('html, body').animate({
-                        scrollTop: $(this).offset().top + 'px'
+                        scrollTop: $(this).offset().top - 90 + 'px'
                     }, 1250, function() {
                         card.animate({
                             backgroundColor: '#e2a8a8'
@@ -55,5 +55,5 @@
             })(jQuery); 
         </script>
 
-    <script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.26dddcf4c210a3cf2c21.bundle.js"></script><script type="text/javascript" src="main.f1efc2dc2ffc3ed330c4.bundle.js"></script></body>
+    <script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.26dddcf4c210a3cf2c21.bundle.js"></script><script type="text/javascript" src="main.fbbd5bdb9a85d8c86d22.bundle.js"></script></body>
 </html>
