maint - add ng2-bootstrap

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,9 @@
         <script type="text/javascript" src="assets/scripts/jquery.color-2.1.2.min.js"></script>
         
         <script type="text/javascript" src='assets/scripts/responsivevoice.js'></script>
+
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+        
         <link rel='stylesheet' href='assets/styles/font-awesome.css'>
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
