new gh-pages version

--- a/404.html
+++ b/404.html
@@ -21,6 +21,9 @@
         <script type="text/javascript" src="assets/scripts/jquery.color-2.1.2.min.js"></script>
         
         <script type="text/javascript" src='assets/scripts/responsivevoice.js'></script>
+
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+        
         <link rel='stylesheet' href='assets/styles/font-awesome.css'>
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -55,5 +58,5 @@
             })(jQuery); 
         </script>
 
-    <script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.26dddcf4c210a3cf2c21.bundle.js"></script><script type="text/javascript" src="main.6c4facc02d78becbe3d2.bundle.js"></script></body>
+    <script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.26dddcf4c210a3cf2c21.bundle.js"></script><script type="text/javascript" src="main.6a3477e0b8bcfed0a5ee.bundle.js"></script></body>
 </html>
