--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
         </script>
 
         <meta charset="utf-8">
-        <title>Ng2Countries By dormd</title>
+        <title>Ng2Countries | By dormd (Dor Moshe)</title>
         <base href="">
 
         <script type="text/javascript" src="assets/scripts/jquery-1.7.1.min.js"></script>
